 - Adds an admin directory .htaccess file to explicitly disable browser caching of any resources.
 - Fixes a relative path vulnerability in module_file_tpl resource.
 - Fixes a path building issue in CmsModuleInfo
 - Fixes to parsing and generating moduleinfo.ini files.
 - Disallow any resource specifications with a * or a /
     * This also means that no file resource specifications with path information will be permitted. 
 - Move mact preprocessing to AFTER the template_top has been processed.  So order of processing (for module actions on the frontend is)
     a:  template top
     b:  mact preprocessing (if enabled, which is the default)
     c:  template body
     d:  template head
 - Fix sureGetNodeByAlias to check if the input is numeric.  if it is, assume that it is a page id, not an alias
 - Fix alias generation in the ContentBase class to check if the input page title is numeric... if it is, prepend a character to it to ensure that integer casting will return 0.
 - Fix listtags to show tags using smarty_nocache_  function name prefix.

AdminSearch v1.0.3
 - Now search the metadata field of content pages.

DesignManager v1.1.3
 - Set title attribute tags for edit/create template, stylesheet, design.

MicroTiny v2.2
 - Upgrade tinymce to v4.6.x.
 - Adds new tabfocus and hr plugins.

News v2.51.2
 - Fixes so that all cancel buttons work properly on new news articles

Version 2.2.1 - Hearts Desire
----------------------------------
Core - General
 - Improve the Smarty plugin loading to handle non-cachable plugins in the /assets/plugins and /plugins directories.
 - Fixes to transaction functions in database abstraction library.
 - Fix CMSModule::GetTemplateResource to no longer accept eval or string resources.
 - Fix CMSSmartySecurityPolicy so that debug_to_log is no longer an allowed function.

   Many thanks to Daniel Le Gall from SCRT SA, Switzerland for reporting the vulnerabilities.

Installation Assistant v1.3.1